# easier

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
code/Pynotebooks/: CAR-Packing_PrepData.ipynb  CARPacking_neighbors.ipynb  IPFS_fetch.ipynb  Inventory_check_GEDI.ipynb  Inventory_check_Landsat.ipynb  Lassie_retrieval_tool.ipynb  Planetary_computer_playground.ipynb  Singularity_CARGenerator.ipynb  Textile-DataAquisition.ipynb  Textile_AuctionSystem.ipynb  Textile_CARGenerator.ipynb  Textile_CARUnpack.ipynb  interact_with_S3.ipynb  stac-interact.ipynb  uploadToS3.ipynb  user_access_simulation.ipynb
code/Pynotebooks/Archive/: Textile-DataAquisition.ipynb  Textile_AuctionSystem.ipynb  Textile_CARGenerator.ipynb  Textile_CARUnpack.ipynb  uploadToS3.ipynb
code/pyScripts/: CAR_generator.py  auction_system_textile.py  cachingScenarios.py  cachingScenariosS3.py  daac_pool.py  daac_session.py  flask_webserver.py  gedi_lpdaac_metadata.py  kdtreeLandsat.ipynb  landsat_from_ee.py  landsat_from_m2m.py  test_flask_server.py  validateSTAC.py
code/shellScripts/: COG_Generator.sh  chirps_extract.sh  daac_download.sh  data_aquisition.sh  data_aquisition_MOD09.sh  date_loop.sh  downloader_m2m.sh  egress_to_piknik.sh  egress_to_s3.sh  extract_stac_from_tar.sh  store_stac_local_copy.sh  upload_to_s3_with_CID_key.sh
data/GIS/: landsat_scenes_descending_daytime.gpkg  user_simulation.qgz
easier_tools/Pynotebooks/: CAR-Packing_PrepData.ipynb  CARPacking_neighbors.ipynb  Inventory_check_GEDI.ipynb  Inventory_check_Landsat.ipynb  Lassie_retrieval_tool.ipynb  NDVI_Analysis.ipynb  Planetary_computer_playground.ipynb  Singularity_CARGenerator.ipynb  Storing-content-in-cars.ipynb  kdtreeLandsat.ipynb
easier_tools/Pynotebooks/Archive/: Textile_CARGenerator.ipynb  uploadToS3.ipynb
easier_tools/pyScripts/: daac_session.py  gather_gedi_inventory.py  gedi_lpdaac_metadata.py  landsat_from_ee.py  validateSTAC.py  validate_cloud_optimized_geotiff.py
easier_tools/pyScripts/Archive/: CAR_generator.py  auction_system_textile.py
easier_tools/shellScripts/: chirps_extract.sh  data_aquisition_MOD09.sh  downloader_m2m.sh  extract_stac_from_tar.sh  upload_to_s3_with_CID_key.sh
easier_tools/shellScripts/singularity/: _singularity_helpers.sh  run-dataprep-single.sh  sample_data_gen.sh  singularity-data-prep.sh  token_renewal.sh
easier_tools/utils/: update_netrc_file.py
requirements/: constraints.txt  requirements.txt
